# loguru-middleware

./: .gitignore  LICENSE  README.md  pyproject.toml
loguru-middleware/: middleware.py
